--- a/src/components/InputTable/InputTable.css
+++ b/src/components/InputTable/InputTable.css
@@ -8,7 +8,7 @@
 
 .Landscape-InputTable input,
 .Landscape-InputTable select {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 0.95);
   border: 0.1em solid rgba(0, 120, 240, 0.5);
   border-radius: 0.5em;
   margin-left: auto;
@@ -24,6 +24,10 @@
 .Landscape-InputTable select:not(:active):not(:focus) {
   background-color: transparent;
   border-color: transparent;
+}
+
+.Landscape-InputTable > .Landscape-InputTable-header > .Landscape-InputTable-table-row {
+  align-items: end;
 }
 
 .Landscape-InputTable > .Landscape-InputTable-table-body > .Landscape-InputTable-table-row + .Landscape-InputTable-table-row {
