--- a/src/components/PhotoViewer/PhotoViewer.css
+++ b/src/components/PhotoViewer/PhotoViewer.css
@@ -1,23 +1,26 @@
 .Landscape-PhotoViewer {
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  left: 0;
   position: fixed;
   top: 0;
-  left: 0;
-  height: 100%;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .Landscape-PhotoViewer img {
   border-radius: 1vmin;
   max-height: 98%;
   max-width: 98%;
-  transition: filter 0.7s ease, opacity 0.7s;
+  transition:
+    filter 0.7s ease,
+    opacity 0.7s
+  ;
 }
 
 .Landscape-PhotoViewer img.Landscape-PhotoViewer-initial {
-  opacity: 0;
   filter: blur(100px);
+  opacity: 0;
 }
