--- a/src/components/Window/Window.css
+++ b/src/components/Window/Window.css
@@ -1,22 +1,13 @@
 .Landscape-Window {
-  max-width: 100vw;
-  min-height: calc(1em + 0.1vmin + 0.1vmin); /* .Landscape-Window-title-bar(height + padding-top + padding-bottom) */
-  min-width: 10vw;
   outline: transparent none;
   overflow: hidden;
   position: absolute;
-  resize: both;
   transition:
     box-shadow 0.2s,
-    max-width 1s,
     opacity 0.2s,
     outline-color 0.2s,
     transform 0.1s
   ;
-}
-
-.Landscape-Window.Landscape-Window-minimized {
-  max-width: 15vw;
 }
 
 .Landscape-Window:hover {
@@ -42,16 +33,22 @@
 }
 
 .Landscape-Window-contents {
+  background-color: rgba(240, 240, 240, 0.95);
+  min-width: 10vw;
   max-height: calc( 100vh - (1em + 0.1vmin + 0.1vmin) ) /* :root(height) - .Landscape-Window-title-bar(height + padding-top + padding-bottom) */;
+  max-width: 100vw;
   overflow: auto;
+  resize: both;
   transition:
     max-height 1s,
+    max-width 1s,
     opacity 1s
   ;
 }
 
 .Landscape-Window.Landscape-Window-minimized .Landscape-Window-contents {
   max-height: 0;
+  max-width: 0;
   opacity: 0;
 }
 
@@ -82,7 +79,7 @@
 }
 
 .Landscape-Window-title-bar {
-  background-color: rgba(248, 248, 248, 0.95);
+  background-color: rgba(255, 255, 255, 0.95);
   background-image: linear-gradient(
     transparent,
     rgba(224, 224, 224, 0.125) 60%,
